--- a/bin/views/1-index.ejs
+++ b/bin/views/1-index.ejs
@@ -82,22 +82,21 @@
     </header>
     <!-- header -->
     <main class="product-general">
-        <!--counter start-->
+        <!--Header section start-->
         <div class="counter">
             <div class="row justify-content-center mb-2" style="padding-top: 60px">
                 <h1 class="">
-                    <strong>Subscribed  to  get  speacial  discount  max  70%
+                    <strong><%= title %>
                         </strong>
                 </h1>
             </div>
-            <div class="row justify-content-center rounded-pill mt-4" id="countdown" style="padding-bottom: 100px; font-size: 70px"></div>
             <div class="row mt-1 pb-1">
                 <div class="col-md-12 text-center">
                     <a class="btn btn-danger text-light btn-lg " href="5-sign-up.html">REGISTER NOW</a>
                 </div>
             </div>
         </div>
-        <!--counter end-->
+        <!--header section end-->
         <div class="product-infor">
             <div class="container mt-5">
                 <div class="row">
