--- a/bin/views/4-sign-in.ejs
+++ b/bin/views/4-sign-in.ejs
@@ -207,5 +207,6 @@
   // update firestore settings
   db.settings({});
 </script>
+<script src="/javascripts/auth2.js"></script>
 
 <%- include('footer.ejs'); %>
