--- a/bin/views/footer.ejs
+++ b/bin/views/footer.ejs
@@ -1,10 +1,11 @@
-</script>
 
 <!-- bootstrap js -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
+<script src="/bin/www.js"></script>
+<script src="/javascripts/auth.js"></script>
+<script src="/javascripts/auth2.js"></script>
 </body>
 
 </html>
