--- a/bin/views/5-sign-up.ejs
+++ b/bin/views/5-sign-up.ejs
@@ -154,6 +154,7 @@
                 </div>
             </form>
                 <p style="text-align:center">OR</p>
+                // signUp form!!!!!!!!!
                 <form id="form-signup" method="post" action="/signUp">
                     <input type="text" name="name" class="form-control" placeholder="Full name" required />
                     <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus="" />
